--- a/style.css
+++ b/style.css
@@ -18,6 +18,8 @@ html {
 body {
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-direction: column;
 }
 
 header {
@@ -52,14 +54,6 @@ nav a {
 
 nav a:hover {
     color: #f00;
-}
-
-footer {
-    width: 100vw;
-    background-color: var(--background-color);
-    height: 100px;
-    margin: 0;
-    padding: 0;
 }
 
 h3 {
@@ -209,7 +203,7 @@ p {
     display: block;
 }
 
-.race-container, .class-container, .spell-container {
+.race-container, .class-container {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -218,12 +212,87 @@ p {
     height: 200px;
 }
 
+.spell-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-content: space-evenly;
+    gap: 1rem;
+    margin: 1rem;
+    flex-wrap: wrap;
+}
+
 .spell-list-container {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 0rem;
+    padding: 1rem;
+    border: 2px dashed #333;
+    min-height: 200px;
+}
+
+.spell-list {
+    width: 120px;
+}
+
+.spell-label {
+    font-size: 1.2rem;
+    margin: 0;
+    width: 60px;
+}
+
+.info-icon {
+    cursor: pointer;
+    user-select: none;
+}
+
+#popup-container {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 400px;
+    height: auto;
+    background-color: #fff;
+    z-index: 9999;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  }
+  
+  #close-button {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    width: 20px;
+    height: 20px;
+    font-size: 14px;
+    font-weight: bold;
+    border-radius: 50%;
+    border: none;
+    background-color: #ccc;
+    color: #fff;
+    cursor: pointer;
+  }
+
+  #popup-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
+    z-index: 9998;
+  }
+
+  .icon-select-container {
+    display: flex;
+    flex-direction: row-reverse;
     justify-content: center;
     align-items: center;
     gap: 1rem;
-    margin: 1rem;
-    height: 200px;
-}
+    margin: 5px;
+  }
