--- a/style.css
+++ b/style.css
@@ -13,7 +13,10 @@ html {
     line-height: 1.5;
     color: #333;
     margin: 0;
-    background-color: rgba(0, 0, 0, 0.3);
+    background-image: url(/Assets/rpg-bg.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 
 body {
@@ -147,7 +150,7 @@ h3 {
 }
 
 .card {
-    background-color: var(--background-color);
+    background-color: rgba(255, 255, 255, 0.3);
     padding: 1rem;
     border: 2px dashed #333;
 }
@@ -337,3 +340,33 @@ p {
     gap: 1rem;
     margin: 5px;
 }
+
+
+
+
+
+.saved-characters-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    padding: 1rem;
+    margin: 1rem;
+}
+
+.saved-characters-container p {
+    font-size: 1.2rem;
+    font-weight: bold;
+    margin: 0;
+}
+
+.character {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 1rem;
+    padding: 1rem;
+    border: 2px dashed #333;
+    font-size: 2rem;
+} 
