--- a/Styles/main.css
+++ b/Styles/main.css
@@ -65,8 +65,17 @@ p {
 
 label {
     text-align: center;
+    margin: 0 5px;
 }
 
+select {
+    font-size: 1rem;
+    border: 2px solid #333;
+    border-radius: 0.5rem;
+    outline: none;
+    background-color: transparent;
+    cursor: pointer;
+}
 
 input {
     font-size: 1.2rem;
