Final commenting and formatting

--- a/Styles/charAbout.css
+++ b/Styles/charAbout.css
@@ -49,7 +49,7 @@ h1 {
     font-size: 2rem;
     font-weight: bold;
     text-align: center;
-    color: rgba(211, 211, 211,1);
+    color: rgba(211, 211, 211, 1);
 }
 
 .saved-characters-container {
