--- a/Styles/main.css
+++ b/Styles/main.css
@@ -509,7 +509,8 @@ main>.menu-toggle {
             "level health";
     }
 
-    p, label {
+    p,
+    label {
         font-size: 1rem !important;
     }
 
