--- a/Styles/main.css
+++ b/Styles/main.css
@@ -446,6 +446,7 @@ main>.menu-toggle {
     width: 50vw;
     min-width: 300px;
     max-width: 600px;
+    background-color: rgb(255, 255, 255);
     z-index: 9999;
 }
 
